mengembalikan index.html
melepas css yang ada pada html

--- a/index.html
+++ b/index.html
@@ -7,105 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <style>
-      * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "poppins", sans-serif;
-}
-
-body {
-  height: 100%;
-  background-color: #066acd;
-}
-
-.container {
-  width: 40%;
-  min-width: 450px;
-  min-height: 100px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #fff;
-  border-radius: 10px;
-}
-
-#newtask {
-  padding: 30px 20px;
-  position: relative;
-}
-
-#newtask input {
-  padding: 12px;
-  width: 75%;
-  height: 45px;
-  color: #111;
-  font-size: 15px;
-  font-weight: 500;
-  position: relative;
-  border: 2px solid #d1d3d4;
-  border-radius: 5px;
-}
-
-#newtask input:focus {
-  outline: none;
-  border-color: #0d75ec;
-}
-
-#newtask button {
-  position: relative;
-  float: right;
-  width: 20%;
-  height: 45px;
-  border-radius: 5px;
-  font-weight: 500;
-  font-size: 16px;
-  background-color: #0d75ec;
-  border: none;
-  color: #fff;
-  outline: none;
-}
-
-#tasks {
-  padding: 30px 20px;
-  margin-top: 10px;
-  width: 100%;
-  position: relative;
-  border-radius: 10px;
-  background-color: #fff;
-}
-
-.task {
-  background-color: #c5e1e6;
-  height: 50px;
-  margin-bottom: 8px;
-  padding: 5px 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 5px;
-  border: 1px solid #939697;
-  cursor: pointer;
-}
-
-.task span {
-  font-size: 15px;
-  font-weight: 400;
-}
-
-.task button {
-  width: 40px;
-  height: 100%;
-  color: #fff;
-  background-color: #0a2ea4;
-  border-radius: 5px;
-  border: none;
-  cursor: pointer;
-  outline: none;
-}
-    </style>
+    <link rel="stylesheet" href="style.css" />
     <title>Todo List</title>
   </head>
   <body>
